build: use @PACKAGE_VERSION@ instead of @REISERFSCORE_VERSION@ in .pc file
@REISERFSCORE_VERSION@ is not defined, so the .pc file would end up
with literally that in the Version field.  This properly places the
version.

Signed-off-by: Jeff Mahoney <jeffm@suse.com>

--- a/reiserfscore/reiserfscore.pc.in
+++ b/reiserfscore/reiserfscore.pc.in
@@ -5,6 +5,6 @@ includedir=@includedir@
 
 Name: reiserfscore
 Description: ReiserFS Core Library
-Version: @REISERFSPROGS_VERSION@
+Version: @PACKAGE_VERSION@
 Cflags: -I${includedir}/reiserfs -I${includedir}
 Libs: -L${libdir} -lreiserfscore
